--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'com.mysql:mysql-connector-j:8.0.32'
+    implementation 'org.flywaydb:flyway-mysql:9.12.0'
+    implementation 'org.flywaydb:flyway-core:9.12.0'
+
+
 
 }
 
